--- a/frontend/src/app/page/components/palette-builder/page-block/palette-item-component/palette-item.component.html
+++ b/frontend/src/app/page/components/palette-builder/page-block/palette-item-component/palette-item.component.html
@@ -4,10 +4,10 @@
   </div>
   <app-animation-hider [show] = "showMoveIcon">
     <div class="frameCover">
-      <div title="Přesunout" class="btn draganddrop">
+      <div matTooltip="Přesunout" class="btn draganddrop">
         <i class="material-icons icon-move">open_with</i>
       </div>
-      <div title="Smazat" class="btn draganddrop" (click)="remove()">
+      <div matTooltip="Smazat" class="btn draganddrop" (click)="remove()">
         <i class="material-icons icon-remove">delete</i>
       </div>
     </div>
