--- a/frontend/src/app/layout/components/menu/menu.component.html
+++ b/frontend/src/app/layout/components/menu/menu.component.html
@@ -8,14 +8,14 @@
       </p>
     </a>
   </li>
-  <li class="nav-item">
-    <a routerLink="web/list" routerLinkActive="active" class="nav-link" (click)="title.setTitle('Moje weby')">
-      <i class="nav-icon fas fa-copy"></i>
-      <p>
-        Moje weby
-      </p>
-    </a>
-  </li>
+<!--  <li class="nav-item">-->
+<!--    <a routerLink="web/list" routerLinkActive="active" class="nav-link" (click)="title.setTitle('Moje weby')">-->
+<!--      <i class="nav-icon fas fa-copy"></i>-->
+<!--      <p>-->
+<!--        Moje weby-->
+<!--      </p>-->
+<!--    </a>-->
+<!--  </li>-->
   <li class="nav-item">
     <a routerLink="page/list" routerLinkActive="active" class="nav-link">
       <i class="nav-icon fas fa-copy"></i>
