--- a/frontend/src/app/web/pages/web-create/select-template/select-template.component.html
+++ b/frontend/src/app/web/pages/web-create/select-template/select-template.component.html
@@ -3,6 +3,7 @@
     <h3 class="card-title">Vyberte šablonu</h3>
   </div>
   <div class="card-body">
+    <h4 class="text-center">Začněte vybráním šablony</h4>
     <div class="d-flex wrapper justify-content-center">
       <div *ngFor="let template of templates" class="template-container d-flex justify-content-center m-2">
         <img *ngIf="template.imagePath" src="{{template.imagePath}}" class="template-image p-2">
