--- a/frontend/src/app/layout/components/layout/layout.component.html
+++ b/frontend/src/app/layout/components/layout/layout.component.html
@@ -5,36 +5,28 @@
   <app-hidder [showOn]="symfonyApiCallEvent.startSendLogin" [hideOn]="symfonyApiCallEvent.stopSendLogin">
     <mat-progress-bar class="progres-line" mode="indeterminate"></mat-progress-bar>
   </app-hidder>
-  <nav class="main-header navbar navbar-expand navbar-white navbar-light justify-content-between">
-    <!-- Left navbar links -->
-    <ul [class.hide-menu]="!isVisibleMenu" class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-      </li>
-    </ul>
-
-    <!-- SEARCH FORM -->
-<!--    <form class="form-inline ml-3">-->
-<!--      <div class="input-group input-group-sm">-->
-<!--        <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">-->
-<!--        <div class="input-group-append">-->
-<!--          <button class="btn btn-navbar" type="submit">-->
-<!--            <i class="fas fa-search"></i>-->
-<!--          </button>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </form>-->
-
-    <!-- Right navbar links -->
+  <nav class="main-header navbar navbar-expand navbar-white navbar-light row">
+    <div class="col-4">
+      <!-- Left navbar links -->
+      <ul [class.hide-menu]="!isVisibleMenu" class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+        </li>
+      </ul>
+    </div>
+    <div class="col-4 text-center">
       <div>Spravujete web: <b>{{webDetailResolverService.webDetail.name}}</b> (<a [routerLink]="['./web/list']">Správa webů</a>) </div>
-      <ul class="navbar-nav">
+    </div>
+    <div class="col-4">
+      <ul class="navbar-nav float-end">
         <!-- Messages Dropdown Menu -->
         <li class="nav-item dropdown">
           <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
             <a href="#" class="dropdown-item">
               <!-- Message Start -->
               <div class="media">
-                <img src="../../../../assets/admin_lte/dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 me-3 img-circle">
+                <img src="../../../../assets/admin_lte/dist/img/user1-128x128.jpg" alt="User Avatar"
+                     class="img-size-50 me-3 img-circle">
                 <div class="media-body">
                   <h3 class="dropdown-item-title">
                     Brad Diesel
@@ -50,7 +42,8 @@
             <a href="#" class="dropdown-item">
               <!-- Message Start -->
               <div class="media">
-                <img src="../../../../assets/admin_lte/dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle me-3">
+                <img src="../../../../assets/admin_lte/dist/img/user8-128x128.jpg" alt="User Avatar"
+                     class="img-size-50 img-circle me-3">
                 <div class="media-body">
                   <h3 class="dropdown-item-title">
                     John Pierce
@@ -66,7 +59,8 @@
             <a href="#" class="dropdown-item">
               <!-- Message Start -->
               <div class="media">
-                <img src="../../../../assets/admin_lte/dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle me-3">
+                <img src="../../../../assets/admin_lte/dist/img/user3-128x128.jpg" alt="User Avatar"
+                     class="img-size-50 img-circle me-3">
                 <div class="media-body">
                   <h3 class="dropdown-item-title">
                     Nora Silvester
@@ -140,12 +134,13 @@
                 <a href="#" class="btn btn-default btn-flat">Profile</a>
               </div>
               <div class="float-end">
-                <button (click)="logout()"  class="btn btn-default btn-flat">Sign out</button>
+                <button (click)="logout()" class="btn btn-default btn-flat">Sign out</button>
               </div>
             </li>
           </ul>
         </li>
       </ul>
+    </div>
 
   </nav>
   <!-- /.navbar -->
