--- a/frontend/src/app/plugins/modules/video/components/video/video.component.html
+++ b/frontend/src/app/plugins/modules/video/components/video/video.component.html
@@ -1,5 +1,6 @@
 <div class="video-container">
-  <iframe *ngIf="settings.videoPath;else other_content" class="frame"
+  <iframe *ngIf="settings.videoPath;else other_content" class="frame" scrolling="no"
+          [style]="disable ? 'overflow: hidden !important;pointer-events: none !important;' : ''"
           [src]="getVideoUrl()">
   </iframe>
   <ng-template #other_content>
