--- a/frontend/src/app/page/components/page-block/page-block/page-block.component.html
+++ b/frontend/src/app/page/components/page-block/page-block/page-block.component.html
@@ -35,7 +35,7 @@
       <div matTooltip="Nastavení Bloku" class="btn draganddrop block-menu-label">
         <strong>Blok</strong>
       </div>
-      <div matTooltip="Nastavení bloku" class="btn draganddrop">
+      <div matTooltip="Nastavení bloku" class="btn draganddrop" (click)="openSettings()">
         <i class="material-icons icon-settings">settings</i>
       </div>
       <div matTooltip="Přesunout" class="btn draganddrop icon-move-block">
