--- a/frontend/src/app/page/components/page-block/block-admin/block-admin.component.html
+++ b/frontend/src/app/page/components/page-block/block-admin/block-admin.component.html
@@ -1,10 +1,22 @@
 <div class="card">
   <div class="card-body">
-      <div class="d-flex flex-md-row flex-wrap justify-content-center delimiter">
+      <div class="d-flex flex-md-row flex-wrap delimiter">
         <div class="px-5">
           <label for="color" class="form-check-label">Barva:</label>
           <input (input)="updateColor($event)" type="color" class="form-control form-control-color" id="color" value="{{settings.backgroundColor}}" title="Vyberte barvu">
-        </div>
+        </div>        <div class="px-5">
+        <label for="color" class="form-check-label">Barva:</label>
+        <input (input)="updateColor($event)" type="color" class="form-control form-control-color" id="color" value="{{settings.backgroundColor}}" title="Vyberte barvu">
+      </div>        <div class="px-5">
+        <label for="color" class="form-check-label">Barva:</label>
+        <input (input)="updateColor($event)" type="color" class="form-control form-control-color" id="color" value="{{settings.backgroundColor}}" title="Vyberte barvu">
+      </div>        <div class="px-5">
+        <label for="color" class="form-check-label">Barva:</label>
+        <input (input)="updateColor($event)" type="color" class="form-control form-control-color" id="color" value="{{settings.backgroundColor}}" title="Vyberte barvu">
+      </div>        <div class="px-5">
+        <label for="color" class="form-check-label">Barva:</label>
+        <input (input)="updateColor($event)" type="color" class="form-control form-control-color" id="color" value="{{settings.backgroundColor}}" title="Vyberte barvu">
+      </div>
         <div class="px-5">
           <label for="image" class="form-check-label">Obrázek:</label>
           <div>
