--- a/frontend/src/app/page/components/page-block/block-admin/block-admin.component.html
+++ b/frontend/src/app/page/components/page-block/block-admin/block-admin.component.html
@@ -4,26 +4,9 @@
         <div class="px-5">
           <label for="color" class="form-check-label">Barva:</label>
           <input (input)="updateColor($event)" type="color" class="form-control form-control-color" id="color" value="{{settings.backgroundColor}}" title="Vyberte barvu">
-        </div>        <div class="px-5">
-        <label for="color" class="form-check-label">Barva:</label>
-        <input (input)="updateColor($event)" type="color" class="form-control form-control-color" id="color" value="{{settings.backgroundColor}}" title="Vyberte barvu">
-      </div>        <div class="px-5">
-        <label for="color" class="form-check-label">Barva:</label>
-        <input (input)="updateColor($event)" type="color" class="form-control form-control-color" id="color" value="{{settings.backgroundColor}}" title="Vyberte barvu">
-      </div>        <div class="px-5">
-        <label for="color" class="form-check-label">Barva:</label>
-        <input (input)="updateColor($event)" type="color" class="form-control form-control-color" id="color" value="{{settings.backgroundColor}}" title="Vyberte barvu">
-      </div>        <div class="px-5">
-        <label for="color" class="form-check-label">Barva:</label>
-        <input (input)="updateColor($event)" type="color" class="form-control form-control-color" id="color" value="{{settings.backgroundColor}}" title="Vyberte barvu">
-      </div>
+        </div>
         <div class="px-5">
-          <label for="image" class="form-check-label">Obrázek:</label>
-          <div>
-            <button mat-raised-button color="primary" class="form-control" id="image"><i
-              class="material-icons">photo</i>Vybrat obrázek
-            </button>
-          </div>
+          <app-image-input [miniature]="true" [path]="settings.backgroundImage" (imagePath)="updateImage($event)"></app-image-input>
         </div>
       </div>
   </div>
