--- a/frontend/src/app/page/components/page-block/page-block/page-block.component.css
+++ b/frontend/src/app/page/components/page-block/page-block/page-block.component.css
@@ -5,7 +5,7 @@
 .block{
   position: relative;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: 100%;
 }
 
 .block:after {
