--- a/frontend/src/app/public/components/public-page-block/public-page-block.component.css
+++ b/frontend/src/app/public/components/public-page-block/public-page-block.component.css
@@ -1,3 +1,9 @@
 .block-content {
   margin: 0 10px;
 }
+
+.block{
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
