--- a/frontend/src/app/core/modules/file-manager/components/image-input/image-input.component.html
+++ b/frontend/src/app/core/modules/file-manager/components/image-input/image-input.component.html
@@ -2,6 +2,7 @@
   <label class="form-check-label" for="image">
     Obrázek:
   </label>
+  <div id="help" class="form-text float-end"><a (click)="openPixabay()" class="text-decoration-none">Obrázky zdarma!</a></div>
   <div>
     <button (click)="onClickAddImageButton()" mat-raised-button color="primary" class="my-2" id="image"><i
       class="material-icons">photo</i>Vybrat obrázek
