--- a/frontend/src/app/page/components/page-block/page-block/page-block.component.css
+++ b/frontend/src/app/page/components/page-block/page-block/page-block.component.css
@@ -94,6 +94,11 @@
   z-index: 2;
 }
 
+.new-row-input-button.empty {
+  position: relative;
+  top: -15px;
+}
+
 .new-row-up {
   width: 50%;
   position: absolute;
@@ -109,7 +114,7 @@
   text-align: left;
   height: 10px;
   right: 15px;
-  top: 17px;
+  top: 50%;
 }
 
 .new-row-bottom {
@@ -186,4 +191,8 @@
   width: auto !important;
   padding: 3px !important;
   color: white;
+}
+
+.text-center {
+  height: 100%;
 }
