--- a/frontend/src/app/page/components/page-block/page-block/page-block.component.html
+++ b/frontend/src/app/page/components/page-block/page-block/page-block.component.html
@@ -1,12 +1,5 @@
 <div class="block" [style.background-image]="pageBlock.backgroundImage ? 'url(' + pageBlock.backgroundImage + ')' : ''" [style.background-color]="pageBlock.backgroundColor" [class.move-menu-hover]="isMoveMenuHover" (mouseleave)="hoverOnIndexRow=null">
-  <div class="text-center" *ngIf="!pageBlock.rows.length">
-    <div class="new-row-center">
-      <button mat-icon-button [matMenuTriggerFor]="menu" class="new-row-input-button" [matMenuTriggerData]="{index: 0}">
-        <mat-icon class="add-icon-row-up">add_circle</mat-icon>
-      </button>
-    </div>
-  </div>
-  <div class="block-content-rows container" [sortablejs]="pageBlock.rows" [sortablejsOptions]="{group: {name: 'rows', put: ['rows']}, handle: '.move-row', onStart: onDragStart, onEnd: onDragEnd}">
+  <div class="block-content-rows container" [style.height.px]="!pageBlock.rows.length ? (pageBlock.height ?? 65) : null" [sortablejs]="pageBlock.rows" [sortablejsOptions]="{group: {name: 'rows', put: ['rows']}, handle: '.move-row', onStart: onDragStart, onEnd: onDragEnd}">
     <div *ngFor="let row of pageBlock.rows; index as i; trackBy: trackByRows">
       <app-animation-hider [show]="i===hoverOnIndexRow || i===hoverOnIndexRow" class="hider-new-row-button">
         <div class="new-row-up">
@@ -25,6 +18,13 @@
           </div>
         </div>
       </app-animation-hider>
+    </div>
+    <div class="text-center" *ngIf="!pageBlock.rows.length">
+      <div class="new-row-center">
+        <button mat-icon-button [matMenuTriggerFor]="menu" class="new-row-input-button empty" [matMenuTriggerData]="{index: 0}">
+          <mat-icon class="add-icon-row-up">add_circle</mat-icon>
+        </button>
+      </div>
     </div>
   </div>
 </div>
