--- a/frontend/src/app/public/components/public-page-block/public-page-block.component.html
+++ b/frontend/src/app/public/components/public-page-block/public-page-block.component.html
@@ -1,5 +1,5 @@
 <div class="block" [style.background-image]="pageBlock.backgroundImage ? 'url(' + pageBlock.backgroundImage + ')' : ''" [style.background-color]="pageBlock.backgroundColor">
-  <div #palette_content class="block-content">
+  <div #palette_content class="block-content" [style.height.px]="!pageBlock.rows.length ? (pageBlock.height ?? 65) : null">
     <app-grid-row-public class="row" [row]="row" *ngFor="let row of pageBlock.rows; index as i"></app-grid-row-public>
   </div>
 </div>
