--- a/frontend/src/app/page/components/page-block/admin/block-appearance/block-appearance.component.html
+++ b/frontend/src/app/page/components/page-block/admin/block-appearance/block-appearance.component.html
@@ -1,15 +1,22 @@
 <div class="card">
   <div class="card-body">
-      <div class="d-flex flex-md-row flex-wrap">
-        <div class="border-outer">
+    <div class="row">
+        <div class="col-md-2">
           <div class="border border-inner">
             <label for="color" class="form-check-label">Barva:</label>
             <input (input)="updateColor($event)" type="color" class="form-control form-control-color" id="color" value="{{settings.backgroundColor}}" title="Vyberte barvu">
           </div>
         </div>
-        <div class="border-outer">
+        <div class="col-md-5">
           <div class="border border-inner">
             <app-image-input [miniature]="true" [path]="settings.backgroundImage" (imagePath)="updateImage($event)"></app-image-input>
+          </div>
+        </div>
+        <div class="col-md-5">
+          <div class="border border-inner">
+            <label for="video" class="form-label">Url videa</label>
+            <input type="text" class="form-control" id="video" [(ngModel)]="settings.backgroundVideo">
+            <div id="emailHelp" class="form-text">Zadejte odkaz na youtube video</div>
           </div>
         </div>
       </div>
