--- a/frontend/src/app/page/components/page-block/page-block/page-block.component.css
+++ b/frontend/src/app/page/components/page-block/page-block/page-block.component.css
@@ -196,3 +196,20 @@
 .text-center {
   height: 100%;
 }
+
+.video-container {
+  position: absolute;
+  height: 100%;
+  top: 0px;
+  width: 100%;
+}
+
+/*.video-container iframe {*/
+/*  position: absolute;*/
+/*  top: 50%;*/
+/*  left: 50%;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  transform: translate(-50%, -50%);*/
+/*  pointer-events: none;*/
+/*}*/
