--- a/frontend/src/app/page/components/page-block/admin/block-appearance/block-appearance.component.html
+++ b/frontend/src/app/page/components/page-block/admin/block-appearance/block-appearance.component.html
@@ -15,7 +15,7 @@
         <div class="col-md-5">
           <div class="border border-inner">
             <label for="video" class="form-label">Url videa</label>
-            <input type="text" class="form-control" id="video" [(ngModel)]="settings.backgroundVideo">
+            <input type="text" class="form-control" id="video" [(ngModel)]="video">
             <div id="emailHelp" class="form-text">Zadejte odkaz na youtube video</div>
           </div>
         </div>
