--- a/frontend/src/app/core/components/mini-admin/mini-admin.component.css
+++ b/frontend/src/app/core/components/mini-admin/mini-admin.component.css
@@ -82,3 +82,19 @@
   border-top: 1px solid black;
   border-right: 1px solid black;
 }
+
+::ng-deep.border-outer {
+  padding-right: .25rem !important;
+  padding-left: .25rem !important;
+  margin-bottom: .5rem !important;
+  margin-right: .25rem !important;
+  margin-left: .25rem !important;
+}
+
+::ng-deep.border-inner {
+  padding-right: 1rem !important;
+  padding-left: 1rem !important;
+  padding-top: .25rem !important;
+  padding-bottom: .25rem !important;
+  margin-bottom: 19px;
+}
