--- a/frontend/src/app/public/components/public-page-block/public-page-block.component.css
+++ b/frontend/src/app/public/components/public-page-block/public-page-block.component.css
@@ -7,3 +7,10 @@
   background-repeat: no-repeat;
   background-size: 100%;
 }
+
+.video-container {
+  position: absolute;
+  height: 100%;
+  top: 0px;
+  width: 100%;
+}
