--- a/frontend/src/app/page/components/page-block/page-block/page-block.component.css
+++ b/frontend/src/app/page/components/page-block/page-block/page-block.component.css
@@ -152,6 +152,7 @@
   outline-width: 2px !important;
   position: relative;
   z-index: 1;
+  box-shadow: 0 0 0 4px #3498db;
 }
 
 .frameCover div.btn {
