--- a/frontend/src/app/plugins/modules/menu/pages/menu-admin/menu-admin.component.html
+++ b/frontend/src/app/plugins/modules/menu/pages/menu-admin/menu-admin.component.html
@@ -1,5 +1,5 @@
 <div class="plugin-form-border">
-  <app-menu-admin-item [items]="items" [options]="options" [sortablejs]="items" [sortablejsOptions]=options></app-menu-admin-item>
+  <app-menu-admin-item (updated)="refreshSettings()" [items]="items" [options]="options" [sortablejs]="items" [sortablejsOptions]=options></app-menu-admin-item>
 </div>
 <div class="text-end">
   <button (click)="addMenuItem()" mat-raised-button color="primary" class="my-2"><i class="material-icons">add</i>Přidat položku menu
