--- a/frontend/src/app/core/components/mini-admin/mini-admin.component.css
+++ b/frontend/src/app/core/components/mini-admin/mini-admin.component.css
@@ -95,6 +95,6 @@
   padding-right: 1rem !important;
   padding-left: 1rem !important;
   padding-top: .25rem !important;
-  padding-bottom: .25rem !important;
+  padding-bottom: 1.25rem !important;
   margin-bottom: 19px;
 }
