--- a/frontend/src/app/plugins/components/plugin-dimension-admin/plugin-dimension-admin.component.html
+++ b/frontend/src/app/plugins/components/plugin-dimension-admin/plugin-dimension-admin.component.html
@@ -5,7 +5,7 @@
         <div class="col-md-6">
           <div class="border border-inner">
             <label for="video" class="form-label">Odsazení levé a pravé (px):</label>
-            <input type="number" class="form-control" id="video" formControlName="horizontalPadding">
+            <input type="number" class="form-control" id="video" formControlName="horizontalMargin">
           </div>
         </div>
       </div>
