--- a/frontend/src/app/public/components/grid-row-public/grid-row-public.component.html
+++ b/frontend/src/app/public/components/grid-row-public/grid-row-public.component.html
@@ -1,4 +1,4 @@
 <app-grid-cell-public [cell]="cell" *ngFor="let cell of row.cells; let last = last;index as i"
-               class="col-md-{{cell.width}}"
+               class="col-md-{{cell.width}} no-vertical-padding"
 >
 </app-grid-cell-public>
