--- a/frontend/src/app/public/components/public-page-block/public-page-block.component.css
+++ b/frontend/src/app/public/components/public-page-block/public-page-block.component.css
@@ -14,3 +14,11 @@
   top: 0px;
   width: 100%;
 }
+
+.block-content-rows.container {
+  max-width: 100%;
+}
+
+.block-content-rows.container > .row {
+  position: relative;
+}
