--- a/frontend/src/app/plugins/modules/menu/pages/menu-logo-admin/menu-logo-admin.component.html
+++ b/frontend/src/app/plugins/modules/menu/pages/menu-logo-admin/menu-logo-admin.component.html
@@ -1,24 +1,21 @@
-<form [formGroup]="adminForm">
-  <div class="d-flex flex-md-row flex-wrap">
-    <div class="form-group input-group-sm me-3">
-      <label for="interval">Název</label>
-      <input id="interval" formControlName="logoName" type="text" class="form-control">
-    </div>
-    <div class="form-check">
-      <label class="form-check-label" for="image">
-        Obrázek
-      </label>
-      <div>
-        <button (click)="onClickAddImageButton()" mat-raised-button color="primary" class="my-2" id="image"><i class="material-icons">photo</i>Přidat obrázek
-        </button>
+<div class="card">
+  <form [formGroup]="adminForm">
+  <div class="card-body">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="border border-inner form-group input-group-sm me-3">
+          <label for="interval">Název</label>
+          <input id="interval" formControlName="logoName" type="text" class="form-control">
+        </div>
       </div>
-      <div *ngIf="settings.logoImage">
-        <br>
-        <img height="65" src="{{settings.logoImage}}"><br>
-        <a (click)="settings.logoImage = '';$event.preventDefault()" href="">Odstranit obrázek</a>
+      <div class="col-md-6">
+        <div class="border border-inner">
+        <app-image-input [miniature]="true" [path]="settings.logoImage" (imagePath)="updateImage($event)"></app-image-input>
+        </div>
       </div>
-
     </div>
-    <!--    <mat-checkbox class="example-margin p-2 flex-fill" formControlName="autostart">Autostart</mat-checkbox>-->
   </div>
-</form>
+  </form>
+</div>
+
+
